KSP support wip

--- a/settings.gradle
+++ b/settings.gradle
@@ -43,6 +43,7 @@ include "inject-groovy"
 include "inject-groovy-test"
 include "inject-java"
 include "inject-java-test"
+include 'inject-kotlin'
 include 'inject-kotlin-test'
 include "inject-test-utils"
 include "jackson-core"
