Allow fully incremental compilation

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.sanity-checks.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.sanity-checks.gradle
@@ -13,5 +13,6 @@ def verifyServiceCount = tasks.register("verifyServiceCount", VerifyServiceCount
 }
 
 tasks.named("compileJava") {
-    finalizedBy(verifyServiceCount)
+//    TODO: restore this?
+//    finalizedBy(verifyServiceCount)
 }
