Allow fetching version props from included boms
We require the grpc.version from the grpc bom.  This is no longer managed by the core bom.

This change allows setting a list of projects to fetch the bom form, and these properties are
added to those extracted from the core bom

--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -1,3 +1,22 @@
+import io.micronaut.build.internal.WriteMicronautVersionInfoTask
+
+apply plugin:'base'
+
+configurations {
+    bomVersions
+}
+
+repositories {
+    mavenCentral()
+}
+
+// Include any of our boms that hava required properties
+dependencies {
+    bomVersions(libs.boms.micronaut.grpc)
+}
+
+def directory = layout.buildDirectory.dir("version-info")
+
 group projectGroupId
 version projectVersion
 
@@ -32,6 +51,10 @@ ext.extraPomInfo = {
         'maven-shade-plugin.version'('3.2.4')
         'maven-surefire-plugin.version'('2.22.2') // Override actual Maven surefire and failsafe version (2.12) to get native support for executing tests on the JUnit Platform (JUnit 5)
         'protoc-jar-maven-plugin.version'('3.11.4')
+        // inject the properties from the required boms
+        directory.get().file(WriteMicronautVersionInfoTask.MICRONAUT_VERSIONS_PROPERTIES_FILE_NAME).asFile.text.readLines()*.split('=', 2).each {
+            "${it[0]}"(it[1])
+        }
     }
     delegate.profiles {
         delegate.profile {
@@ -247,4 +270,18 @@ ext.extraPomInfo = {
     }
 }
 
+def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
+    it.version = projectVersion
+    it.extraBomProperties = [
+            'io.micronaut.grpc:micronaut-grpc'
+    ]
+    it.outputDirectory = directory
+}
+
 apply plugin: "io.micronaut.build.internal.publishing"
+
+afterEvaluate {
+    tasks.named("generatePomFileForMavenPublication", GenerateMavenPom).configure {
+        dependsOn micronautVersionInfo
+    }
+}
