--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ tasks.named("updateVersionCatalogs") {
 if (System.getenv("SONAR_TOKEN") != null) {
     // deprecated and compile time only classes excluded from coverage
     def coverageExcludes = [
+        "**/StreamSoftServiceLoader.java",
         "**/ServiceDescriptionProcessor.java",
         "**/GraalReflectionConfigurer.java",
         "**/graal/ServiceLoaderInitialization.java",
