--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -15,7 +15,13 @@ dependencies {
     bomVersions(libs.boms.micronaut.grpc)
 }
 
-def directory = layout.buildDirectory.dir("version-info")
+def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
+    it.version = projectVersion
+    it.extraBomProperties = [
+            'io.micronaut.grpc:micronaut-grpc'
+    ]
+    it.outputDirectory = layout.buildDirectory.dir("version-info")
+}
 
 group projectGroupId
 version projectVersion
@@ -52,7 +58,11 @@ ext.extraPomInfo = {
         'maven-surefire-plugin.version'('2.22.2') // Override actual Maven surefire and failsafe version (2.12) to get native support for executing tests on the JUnit Platform (JUnit 5)
         'protoc-jar-maven-plugin.version'('3.11.4')
         // inject the properties from the required boms
-        directory.get().file(WriteMicronautVersionInfoTask.MICRONAUT_VERSIONS_PROPERTIES_FILE_NAME).asFile.text.readLines()*.split('=', 2).each {
+        micronautVersionInfo.flatMap { it.outputDirectory.file(WriteMicronautVersionInfoTask.MICRONAUT_VERSIONS_PROPERTIES_FILE_NAME) }
+                .get()
+                .asFile
+                .text
+                .readLines()*.split('=', 2).each {
             "${it[0]}"(it[1])
         }
     }
@@ -268,14 +278,6 @@ ext.extraPomInfo = {
             }
         }
     }
-}
-
-def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
-    it.version = projectVersion
-    it.extraBomProperties = [
-            'io.micronaut.grpc:micronaut-grpc'
-    ]
-    it.outputDirectory = directory
 }
 
 apply plugin: "io.micronaut.build.internal.publishing"
