Use a configuration as an input instead of dependency coords
This means we don't need to disable caching, as it correctly models the inputs

--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -17,9 +17,7 @@ dependencies {
 
 def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
     it.version = projectVersion
-    it.extraBomProperties = [
-            'io.micronaut.grpc:micronaut-grpc'
-    ]
+    it.configuration.set(configurations.bomVersions)
     it.outputDirectory = layout.buildDirectory.dir("version-info")
 }
 
