Allow fully incremental compilation (#7195)
This is a significant change that alters Micronaut so that instead of a single registry of type names contains in META-INF/services entries a directory is created with file names of each type within META-INF/micronaut instead.

The benefit of this change is that we can now fully incrementally compile and avoid completely re-running the annotation processors on each change to an annotated type. We also simplify our annotation processing pipeline with the downstream service generating processor no longer necessary.

The change has implications to AOT and other areas but I don't consider it breaking as Micronaut will continue to work as previously with the change.

This change also addresses issues with Graal since we abuse META-INF/services by storing types that cannot actually be loaded with the standard Java service loader (Micronaut's bean references can reference types that not on the classpath).

This should also address improve the situation with #6579

Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>

--- a/build.gradle
+++ b/build.gradle
@@ -14,3 +14,21 @@ tasks.named("updateVersionCatalogs") {
     // workaround Gradle variant selection problem
     ignoredModules.add("com.github.ben-manes.caffeine:caffeine")
 }
+
+if (System.getenv("SONAR_TOKEN") != null) {
+    // deprecated and compile time only classes excluded from coverage
+    def coverageExcludes = [
+        "**/StreamSoftServiceLoader.java",
+        "**/ServiceDescriptionProcessor.java",
+        "**/GraalReflectionConfigurer.java",
+        "**/graal/ServiceLoaderInitialization.java",
+        "**/graal/ServiceLoaderInitialization.java",
+        "**/DirectoryClassWriterOutputVisitor.java",
+        "**/GroovyClassWriterOutputVisitor.java"
+    ]
+    sonarqube {
+        properties {
+            property "sonar.exclusions", coverageExcludes.join(",")
+        }
+    }
+}
