More powerful listener config for HTTP server, domain socket support This commit adds a configuration structure to configure individual netty HTTP listeners with individual host, port, and SSL settings. The existing configuration options (eg dual-stack, port, ...) remain (and are not deprecated, since they're simpler), and are mapped to the new system.
This patch also adds support for binding to domain sockets for the epoll and kqueue backends. Domain socket support (like the embedded channel introduced in 1bc6e6aaea4e922df4028d668a971e5c358597d5) is not 100% supported, because methods like HttpRequest.getRemoteAddress make no sense with such channels.

Adds #1112

--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation libs.managed.reactor
 
     compileOnly libs.kotlin.stdlib
+    compileOnly libs.managed.netty.transport.native.unix.common
 
     testCompileOnly project(":inject-groovy")
     testAnnotationProcessor project(":inject-java")
