--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compileOnly libs.kotlin.stdlib
 
     testCompileOnly project(":inject-groovy")
+    testCompileOnly(libs.jetbrains.annotations)
     testAnnotationProcessor project(":inject-java")
     testImplementation project(":inject")
     testImplementation project(":inject-java-test")
