--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -122,6 +122,7 @@ httpServer:
       title: Configuring Server Thread Pools
       blockingOperations: Blocking Operations
     nettyPipeline: Configuring the Netty Pipeline
+    listener: Advanced Listener Configuration
     cors: Configuring CORS
     https: Securing the Server with HTTPS
     dualProtocol: Enabling HTTP and HTTPS
