UTF-8 support for Content-Disposition headers for file downloads This patch implements the file name encoding logic from RFC 6266 for unicode file names. RFC 6987 encoding logic is copied from netty. It's unfortunately not quite the same encoding as URLEncoder, and these classes are in http-server, so can't use the netty code.
Fixes #7401

--- a/http-server/build.gradle
+++ b/http-server/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     compileOnly libs.kotlinx.coroutines.reactor
     implementation libs.managed.reactor
     annotationProcessor project(":inject-java")
+
+    testImplementation libs.managed.netty.codec.http
 }
 
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
