Switch to using versions from boms, instead of custom versions
These versions are used in tests, but can be provided by declaring a platform
dependency on the upstream bom that also pulls them in.

The reasoning for doing this is that renovate-bot should spam us less with
dependency updates as these will be handled by the modules themselves.

--- a/test-suite-groovy/build.gradle
+++ b/test-suite-groovy/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testImplementation libs.logbook.netty
     testImplementation project(":function-client")
     testImplementation project(":function-web")
+    testRuntimeOnly(platform(libs.boms.micronaut.aws))
     testRuntimeOnly libs.aws.java.sdk.lambda
 
     testImplementation libs.managed.reactor
