--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
 asm = "9.2"
 awaitility = "4.0.3"
-aws-java-sdk-lambda = "1.12.220"
 bcpkix = "1.69"
 blaze = "1.6.6"
 caffeine = "2.9.3"
@@ -23,10 +22,8 @@ jsr107 = "1.1.1"
 junit4 = "4.13.2"
 javax-el = "3.0.1-b12"
 javax-el-impl = "2.2.1-b05"
-kotest-junit5 = "4.6.4"
 logbook-netty = "2.4.1"
 log4j = "2.17.2"
-mysql-driver = "8.0.29"
 powermock = "2.0.9"
 selenium = "3.141.59"
 smallrye = "5.1.0"
@@ -362,7 +359,7 @@ asm-tree = { module = "org.ow2.asm:asm-tree", version.ref = "asm" }
 
 awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
 
-aws-java-sdk-lambda = { module = "com.amazonaws:aws-java-sdk-lambda", version.ref = "aws-java-sdk-lambda" }
+aws-java-sdk-lambda = { module = "com.amazonaws:aws-java-sdk-lambda" }
 
 bcpkix = { module = "org.bouncycastle:bcpkix-jdk15on", version.ref = "bcpkix" }
 
@@ -405,7 +402,7 @@ jetbrains-annotations = { module = "org.jetbrains:annotations", version.ref = "j
 
 kotlin-annotation-processing-embeddable = { module = "org.jetbrains.kotlin:kotlin-annotation-processing-embeddable", version.ref = "managed-kotlin" }
 kotlin-compiler-embeddable = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable", version.ref = "managed-kotlin" }
-kotlin-kotest-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest-junit5"}
+kotlin-kotest-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "managed-kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "managed-kotlin" }
 kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "managed-kotlin" }
@@ -424,7 +421,7 @@ logbook-netty = { module = "org.zalando:logbook-netty", version.ref = "logbook-n
 
 micronaut-docs = { module = "io.micronaut.docs:micronaut-docs-asciidoc-config-props", version.ref = "micronaut-docs" }
 
-mysql-driver = { module = "mysql:mysql-connector-java", version.ref = "mysql-driver" }
+mysql-driver = { module = "mysql:mysql-connector-java" }
 
 netty-tcnative = { module = 'io.netty:netty-tcnative' }
 netty-tcnative-boringssl = { module = 'io.netty:netty-tcnative-boringssl-static' }
@@ -443,8 +440,8 @@ smallrye = { module = "io.smallrye:smallrye-fault-tolerance", version.ref = "sma
 
 systemlambda = { module = "com.github.stefanbirkner:system-lambda", version.ref = "systemlambda" }
 
-micronaut-tracing-jaeger = { module = "io.micronaut.tracing:micronaut-tracing-jaeger", version.ref = "managed-micronaut-tracing" }
-micronaut-tracing-zipkin = { module = "io.micronaut.tracing:micronaut-tracing-zipkin", version.ref = "managed-micronaut-tracing" }
+micronaut-tracing-jaeger = { module = "io.micronaut.tracing:micronaut-tracing-jaeger" }
+micronaut-tracing-zipkin = { module = "io.micronaut.tracing:micronaut-tracing-zipkin" }
 
 testcontainers-spock = { module = "org.testcontainers:spock", version.ref = "managed-testcontainers" }
 
