--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation libs.junit.jupiter.api
 
     testImplementation libs.managed.jcache
+    testImplementation(platform(libs.boms.micronaut.tracing))
     testImplementation(libs.micronaut.tracing.jaeger) {
         exclude module: 'micronaut-bom'
         exclude module: 'micronaut-http-client'
@@ -64,6 +65,7 @@ dependencies {
     testAnnotationProcessor project(":inject-java")
     testAnnotationProcessor project(":test-suite")
 
+    testRuntimeOnly(platform(libs.boms.micronaut.aws))
     testRuntimeOnly libs.managed.h2
     testRuntimeOnly libs.junit.vintage
     testRuntimeOnly libs.managed.logback
