--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
 asm = "9.2"
 awaitility = "4.0.3"
-aws-java-sdk-lambda = "1.12.220"
 bcpkix = "1.69"
 blaze = "1.6.6"
 caffeine = "2.9.3"
@@ -20,14 +19,10 @@ jetbrains-annotations = "23.0.0"
 jetty = "9.4.46.v20220331"
 jmh = "1.29"
 jsr107 = "1.1.1"
-junit4 = "4.13.2"
 javax-el = "3.0.1-b12"
 javax-el-impl = "2.2.1-b05"
-kotest-junit5 = "4.6.4"
 logbook-netty = "2.4.1"
 log4j = "2.17.2"
-mysql-driver = "8.0.29"
-powermock = "2.0.9"
 selenium = "3.141.59"
 smallrye = "5.1.0"
 systemlambda = "1.2.1"
@@ -362,7 +357,7 @@ asm-tree = { module = "org.ow2.asm:asm-tree", version.ref = "asm" }
 
 awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
 
-aws-java-sdk-lambda = { module = "com.amazonaws:aws-java-sdk-lambda", version.ref = "aws-java-sdk-lambda" }
+aws-java-sdk-lambda = { module = "com.amazonaws:aws-java-sdk-lambda" }
 
 bcpkix = { module = "org.bouncycastle:bcpkix-jdk15on", version.ref = "bcpkix" }
 
@@ -399,13 +394,12 @@ jsr107 = { module = "org.jsr107.ri:cache-ri-impl", version.ref = "jsr107" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "managed-junit5" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "managed-junit5" }
 junit-vintage = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "managed-junit5" }
-junit4 = { module = "junit:junit", version.ref = "junit4" }
 
 jetbrains-annotations = { module = "org.jetbrains:annotations", version.ref = "jetbrains-annotations" }
 
 kotlin-annotation-processing-embeddable = { module = "org.jetbrains.kotlin:kotlin-annotation-processing-embeddable", version.ref = "managed-kotlin" }
 kotlin-compiler-embeddable = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable", version.ref = "managed-kotlin" }
-kotlin-kotest-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest-junit5"}
+kotlin-kotest-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "managed-kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "managed-kotlin" }
 kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "managed-kotlin" }
@@ -424,13 +418,10 @@ logbook-netty = { module = "org.zalando:logbook-netty", version.ref = "logbook-n
 
 micronaut-docs = { module = "io.micronaut.docs:micronaut-docs-asciidoc-config-props", version.ref = "micronaut-docs" }
 
-mysql-driver = { module = "mysql:mysql-connector-java", version.ref = "mysql-driver" }
+mysql-driver = { module = "mysql:mysql-connector-java" }
 
 netty-tcnative = { module = 'io.netty:netty-tcnative' }
 netty-tcnative-boringssl = { module = 'io.netty:netty-tcnative-boringssl-static' }
-
-powermock-junit4 = { module = "org.powermock:powermock-module-junit4", version.ref = "powermock" }
-powermock-mockito2 = { module = "org.powermock:powermock-api-mockito2", version.ref = "powermock" }
 
 selenium-remote-driver = { module = "org.seleniumhq.selenium:selenium-remote-driver", version.ref = "selenium" }
 selenium-api = { module = "org.seleniumhq.selenium:selenium-api", version.ref = "selenium" }
@@ -443,8 +434,8 @@ smallrye = { module = "io.smallrye:smallrye-fault-tolerance", version.ref = "sma
 
 systemlambda = { module = "com.github.stefanbirkner:system-lambda", version.ref = "systemlambda" }
 
-micronaut-tracing-jaeger = { module = "io.micronaut.tracing:micronaut-tracing-jaeger", version.ref = "managed-micronaut-tracing" }
-micronaut-tracing-zipkin = { module = "io.micronaut.tracing:micronaut-tracing-zipkin", version.ref = "managed-micronaut-tracing" }
+micronaut-tracing-jaeger = { module = "io.micronaut.tracing:micronaut-tracing-jaeger" }
+micronaut-tracing-zipkin = { module = "io.micronaut.tracing:micronaut-tracing-zipkin" }
 
 testcontainers-spock = { module = "org.testcontainers:spock", version.ref = "managed-testcontainers" }
 
