--- a/inject-java/build.gradle
+++ b/inject-java/build.gradle
@@ -28,7 +28,6 @@ dependencies {
 
     testImplementation libs.managed.spotbugs
     testImplementation libs.hibernate
-    testImplementation libs.junit4
     testImplementation libs.compile.testing
     testImplementation(libs.managed.neo4j.bolt) {
         version {
@@ -42,6 +41,7 @@ dependencies {
     testImplementation libs.managed.micrometer.core
     testImplementation project(":validation")
     testImplementation libs.junit.jupiter.api
+    testImplementation(platform(libs.boms.micronaut.tracing))
     testImplementation(libs.micronaut.tracing.zipkin) {
         exclude module: 'micronaut-bom'
         exclude module: 'micronaut-http-client'
