Stop the parent versionInfo task using the cache
Caching isn't working for this task, so adding a new bomVersions library still uses
the old one from the cache.

To unblock the release pipeline, we will make the task never up to date for now, and
revisit later when there are less time constraints

--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -17,9 +17,11 @@ dependencies {
 }
 
 def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
-    it.version = projectVersion
-    it.configuration = configurations.bomVersions
-    it.outputDirectory = layout.buildDirectory.dir("version-info")
+    version = projectVersion
+    configuration = configurations.bomVersions
+    outputDirectory = layout.buildDirectory.dir("version-info")
+    // TODO: Fix the caching for this task
+    outputs.upToDateWhen { false }
 }
 
 group projectGroupId
