Switch to string based dependencies for version lookup (#7423)
* Stop the parent versionInfo task using the cache

Caching isn't working for this task, so adding a new bomVersions library still uses
the old one from the cache.

To unblock the release pipeline, we will make the task never up to date for now, and
revisit later when there are less time constraints

* Switch to using a String so caching works

--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -17,9 +17,9 @@ dependencies {
 }
 
 def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
-    it.version = projectVersion
-    it.configuration = configurations.bomVersions
-    it.outputDirectory = layout.buildDirectory.dir("version-info")
+    version = projectVersion
+    dependencies.set(configurations.bomVersions.getAllDependencies().collect { "$it.group:$it.name:$it.version" })
+    outputDirectory = layout.buildDirectory.dir("version-info")
 }
 
 group projectGroupId
