--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -134,7 +134,7 @@ managed-spock = "2.0-groovy-3.0"
 managed-spotbugs = "4.7.0"
 managed-spring = "5.3.20"
 managed-springboot = "2.5.12"
-managed-swagger = ""
+managed-swagger = "2.2.0"
 managed-validation = "2.0.1.Final"
 managed-testcontainers = "1.17.2"
 managed-snakeyaml = "1.30"
