--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -115,6 +115,7 @@ managed-micronaut-servlet = "3.2.3"
 managed-micronaut-spring = "4.1.0"
 managed-micronaut-sql = "4.4.0"
 managed-micronaut-test = "3.3.0"
+managed-micronaut-test-resources = "1.0.0-M1"
 managed-micronaut-toml = "1.0.0"
 managed-micronaut-tracing = "4.1.1"
 managed-micronaut-tracing-legacy = "3.2.7"
