--- a/http-client/build.gradle
+++ b/http-client/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     testImplementation project(":http-server-netty")
     testImplementation libs.wiremock
+    testImplementation libs.managed.logback
 
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
