chore: Set permissions for GitHub actions
 Restrict the GitHub token permissions only to the required ones; this way, even if the attackers will succeed in compromising your workflow, they won’t be able to do much.

- Included permissions for the action. https://github.com/ossf/scorecard/blob/main/docs/checks.md#token-permissions

https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions

https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs

[Keeping your GitHub Actions and workflows secure Part 1: Preventing pwn requests](https://securitylab.github.com/research/github-actions-preventing-pwn-requests/)

Signed-off-by: neilnaveen <42328488+neilnaveen@users.noreply.github.com>

--- a/.github/workflows/central-sync.yml
+++ b/.github/workflows/central-sync.yml
@@ -10,6 +10,9 @@ on:
       release_version:
         description: 'Release version (eg: 1.2.3)'
         required: true
+permissions:
+  contents: read
+
 jobs:
   central-sync:
     runs-on: ubuntu-latest
