New server channel customization API The changes in #6842 planned for 4.0 will break compatibility of `ChannelPipelineCustomizer` users that modify the server pipeline. This patch introduces a new `ServerNettyCustomizer` API that is more generic and, importantly, allows for more granularity when waiting for the stages of pipeline construction.
Also included in this patch is an extensive test suite that tests the logbook customizer example from the documentation in all scenarios we support (raw http1, tls alpn, and h2c support).

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -124,7 +124,8 @@ httpServer:
       title: Configuring Server Thread Pools
       blockingOperations: Blocking Operations
       atBlocking: '@Blocking'
-    nettyPipeline: Configuring the Netty Pipeline
+    nettyClientPipeline: Configuring the Netty Client Pipeline
+    nettyServerPipeline: Configuring the Netty Server Pipeline
     listener: Advanced Listener Configuration
     cors: Configuring CORS
     https: Securing the Server with HTTPS
