Add javadoc / groovydoc support to read any element documentation

--- a/inject-groovy/build.gradle
+++ b/inject-groovy/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
 tasks.named("test") {
     exclude '**/*$_closure*'
+
+    systemProperty "groovy.attach.groovydoc", true
 }
 
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
