build: Downgrade GraalVM SDK to 22.0.0.2 (#7663)
* Downgrade GraalVM SDK to 22.0.0.2

To avoid having to do in modules : 

https://github.com/micronaut-projects/micronaut-sql/blob/master/buildSrc/src/main/groovy/io.micronaut.build.internal.sql-module.gradle#L5-L9

and: https://github.com/micronaut-projects/micronaut-kafka/pull/564/files

* add comment

[ci skip]

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,7 +44,8 @@ managed-google-function-invoker = "1.0.0"
 managed-gorm = "7.3.1"
 managed-gorm-hibernate = "7.2.2"
 # be sure to update graal version in gradle.properties as well
-managed-graal-sdk = "22.1.0.1"
+# Intentionally pin to 22.0.0.2 see https://github.com/micronaut-projects/micronaut-kafka/pull/564 and https://github.com/micronaut-projects/micronaut-core/pull/7663 
+managed-graal-sdk = "22.0.0.2"
 managed-graal = "22.1.0"
 managed-graal-svm = "22.0.0.2"
 managed-groovy = "3.0.10"
