Update to Test Resources 1.0.0 and import its bom (#7676)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -115,7 +115,7 @@ managed-micronaut-servlet = "3.2.3"
 managed-micronaut-spring = "4.2.1"
 managed-micronaut-sql = "4.6.0"
 managed-micronaut-test = "3.4.0"
-managed-micronaut-test-resources = "1.0.0-M1"
+managed-micronaut-test-resources = "1.0.0"
 managed-micronaut-toml = "1.0.0"
 managed-micronaut-tracing = "4.2.0"
 managed-micronaut-tracing-legacy = "3.2.7"
@@ -176,6 +176,7 @@ boms-micronaut-tracing = { module = "io.micronaut.tracing:micronaut-tracing-bom"
 boms-micronaut-views = { module = "io.micronaut.views:micronaut-views-bom", version.ref = "managed-micronaut-views" }
 boms-micronaut-r2dbc = { module = "io.micronaut.r2dbc:micronaut-r2dbc-bom", version.ref = "managed-micronaut-r2dbc" }
 boms-micronaut-flyway = { module = "io.micronaut.flyway:micronaut-flyway-bom", version.ref = "managed-micronaut-flyway" }
+boms-micronaut-test-resources = { module = "io.micronaut.testresources:micronaut-test-resources-bom", version.ref = "managed-micronaut-test-resources" }
 
 boms-groovy = { module = "org.codehaus.groovy:groovy-bom", version.ref = "managed-groovy" }
 boms-jackson = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "managed-jackson" }
