--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -268,6 +268,9 @@ ext.extraPomInfo = {
                         buildArgs {
                             buildArg '--no-fallback'
                         }
+                        environment {
+                            USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM(false)
+                        }
                     }
                 }
                 delegate.plugin {
