--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -134,7 +134,7 @@ managed-rxjava1-interop = "0.13.7"
 managed-slf4j = "1.7.36"
 managed-spock = "2.0-groovy-3.0"
 managed-spotbugs = "4.7.0"
-managed-swagger = ""
+managed-swagger = "2.2.1"
 managed-validation = "2.0.1.Final"
 managed-testcontainers = "1.17.2"
 managed-snakeyaml = "1.30"
