--- a/settings.gradle
+++ b/settings.gradle
@@ -26,6 +26,7 @@ include "buffer-netty"
 include "core"
 include "core-reactive"
 include "context"
+include "crac"
 include "function"
 include "function-client"
 include "function-web"
