Switch to allow CRaC to be a compile time dependency

--- a/crac/build.gradle
+++ b/crac/build.gradle
@@ -6,7 +6,9 @@ dependencies {
     annotationProcessor project(":inject-java")
 
     api(project(":runtime"))
-    api(libs.crac)
+    compileOnly(libs.crac)
+
+    testImplementation(project(':context'))
 }
 
 // First version of the crac module
