--- a/inject-groovy-test/build.gradle
+++ b/inject-groovy-test/build.gradle
@@ -11,6 +11,7 @@ dependencies {
         exclude module:'groovy-all'
     }
     api project(":context")
+    api libs.jetbrains.annotations
 }
 
 tasks.named("sourcesJar") {
