--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,7 +48,7 @@ managed-gorm-hibernate = "7.3.0"
 managed-graal-sdk = "22.0.0.2"
 managed-graal = "22.2.0"
 managed-graal-svm = "22.0.0.2"
-managed-groovy = "3.0.12"
+managed-groovy = "4.0.5"
 managed-h2 = "2.1.210"
 managed-hystrix = "1.5.18"
 managed-jakarta-annotation-api = "2.1.1"
@@ -134,7 +134,7 @@ managed-reactor = "3.4.22"
 managed-rxjava1 = "1.3.8"
 managed-rxjava1-interop = "0.13.7"
 managed-slf4j = "1.7.36"
-managed-spock = "2.0-groovy-3.0"
+managed-spock = "2.2-groovy-4.0"
 managed-spotbugs = "4.7.1"
 managed-spring = "5.3.22"
 managed-springboot = "2.7.0"
@@ -186,7 +186,7 @@ boms-micronaut-r2dbc = { module = "io.micronaut.r2dbc:micronaut-r2dbc-bom", vers
 boms-micronaut-flyway = { module = "io.micronaut.flyway:micronaut-flyway-bom", version.ref = "managed-micronaut-flyway" }
 boms-micronaut-test-resources = { module = "io.micronaut.testresources:micronaut-test-resources-bom", version.ref = "managed-micronaut-test-resources" }
 
-boms-groovy = { module = "org.codehaus.groovy:groovy-bom", version.ref = "managed-groovy" }
+boms-groovy = { module = "org.apache.groovy:groovy-bom", version.ref = "managed-groovy" }
 boms-jackson = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "managed-jackson" }
 boms-junit5 = { module = "org.junit:junit-bom", version.ref = "managed-junit5" }
 boms-kotlin = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "managed-kotlin" }
@@ -227,10 +227,10 @@ managed-gorm-hibernate = { module = "org.grails:grails-datastore-gorm-hibernate5
 managed-graal = { module = "org.graalvm.nativeimage:svm", version.ref = "managed-graal-svm" }
 managed-graal-sdk = { module = "org.graalvm.sdk:graal-sdk", version.ref = "managed-graal-sdk" }
 
-managed-groovy = { module = "org.codehaus.groovy:groovy", version.ref = "managed-groovy" }
-managed-groovy-json = { module = "org.codehaus.groovy:groovy-json", version.ref = "managed-groovy" }
-managed-groovy-sql = { module = "org.codehaus.groovy:groovy-sql", version.ref = "managed-groovy" }
-managed-groovy-templates = { module = "org.codehaus.groovy:groovy-templates", version.ref = "managed-groovy" }
+managed-groovy = { module = "org.apache.groovy:groovy", version.ref = "managed-groovy" }
+managed-groovy-json = { module = "org.apache.groovy:groovy-json", version.ref = "managed-groovy" }
+managed-groovy-sql = { module = "org.apache.groovy:groovy-sql", version.ref = "managed-groovy" }
+managed-groovy-templates = { module = "org.apache.groovy:groovy-templates", version.ref = "managed-groovy" }
 
 managed-h2 = { module = "com.h2database:h2", version.ref = "managed-h2" }
 
@@ -365,7 +365,7 @@ compile-testing = { module = "com.google.testing.compile:compile-testing", versi
 
 geb-spock = { module = "org.gebish:geb-spock", version.ref = "geb" }
 
-groovy-test-junit5 = { module = "org.codehaus.groovy:groovy-test-junit5", version.ref = "managed-groovy" }
+groovy-test-junit5 = { module = "org.apache.groovy:groovy-test-junit5", version.ref = "managed-groovy" }
 
 hibernate = { module = "org.hibernate:hibernate-core", version.ref = "hibernate" }
 hibernate-validator = { module = "org.hibernate:hibernate-validator", version.ref = "hibernate-validator" }
