--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -22,8 +22,8 @@ micronautBuild {
     }
 }
 
-apply from: "${rootProject.projectDir}/gradle/geb.gradle"
-apply from: "${rootProject.projectDir}/gradle/webdriverbinaries.gradle"
+//apply from: "${rootProject.projectDir}/gradle/geb.gradle"
+//apply from: "${rootProject.projectDir}/gradle/webdriverbinaries.gradle"
 
 dependencies {
     annotationProcessor project(":inject-java")
