--- a/gradle.properties
+++ b/gradle.properties
@@ -53,5 +53,5 @@ graalVersion=22.0.0.2
 micronautSecurityVersion=3.7.1
 
 org.gradle.caching=true
-org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1g
+org.gradle.parallel=false
