--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     implementation "org.aim42:htmlSanityCheck:1.1.6"
     implementation "io.micronaut.build.internal:micronaut-gradle-plugins:5.3.14"
     implementation "org.tomlj:tomlj:1.0.0"
+    implementation "me.champeau.gradle:japicmp-gradle-plugin:0.4.1"
 }
