--- a/inject-groovy/build.gradle
+++ b/inject-groovy/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     }
     testImplementation libs.managed.groovy.json
     testImplementation libs.blaze.persistence.core
-
+    testImplementation libs.managed.snakeyaml
     testImplementation libs.managed.reactor
 
     functionalTestImplementation(testFixtures(project(":test-suite")))
