--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compileOnly libs.kotlinx.coroutines.reactive
     compileOnly libs.managed.logback
     testImplementation libs.managed.logback
-
+    testImplementation libs.managed.snakeyaml
     testAnnotationProcessor project(":inject-java")
     testImplementation libs.jsr107
     testImplementation libs.managed.jcache
