--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,11 @@ bcpkix = "1.70"
 blaze = "1.6.7"
 caffeine = "2.9.3"
 compile-testing = "0.19"
+
 geb = "3.4.1"
+geb-groovy = "3.0.12"
+geb-spock = "2.2-groovy-3.0"
+
 hibernate = "5.5.9.Final"
 hibernate-validator = "6.1.6.Final"
 htmlSanityCheck = "1.1.6"
@@ -364,7 +368,8 @@ caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "c
 compile-testing = { module = "com.google.testing.compile:compile-testing", version.ref = "compile-testing" }
 
 geb-spock = { module = "org.gebish:geb-spock", version.ref = "geb" }
-spock-for-geb = { module = "org.spockframework:spock-core", version = "2.2-groovy-3.0" }
+spock-for-geb = { module = "org.spockframework:spock-core", version.ref = "geb-spock" }
+geb-groovy-test = { module = "org.codehaus.groovy:groovy-test", version.ref = "geb-groovy" }
 
 groovy-test-junit5 = { module = "org.apache.groovy:groovy-test-junit5", version.ref = "managed-groovy" }
 
