Exclude signature files from the uber-jar
Fixes https://github.com/micronaut-projects/micronaut-oracle-cloud/issues/401

--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -253,6 +253,16 @@ ext.extraPomInfo = {
                                     }
                                     transformer(implementation:'org.apache.maven.plugins.shade.resource.ServicesResourceTransformer')
                                 }
+                                filters{
+                                    filter {
+                                        artifact '*.*'
+                                        excludes {
+                                            exclude "META-INF/*.SF"
+                                            exclude "META-INF/*.DSA"
+                                            exclude "META-INF/*.RSA"
+                                        }
+                                    }
+                                }
                             }
                         }
                     }
